Document PPDG/src/objects/RewindValidation__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>C00094: validation for rewind event.
List of rules to test Opportunity or Extended Opportunity field values to see if rewind should be permitted.

e.g. Rule to prevent rewind if the application has been declined
Object = HPP_extended_opportunity__c, Field = Pre_Val_Dec_1__c, DataType = string , Operator = =, Value = Declined, ErrorMessage = This application has been declined.

This rule will check the value in the Pre_Val_Dec_1__c field from the application being rewound and if that value is equal to Declined it will fail the validation. The rewind screen will display the error message in ErrorMessage</description>
    <fields>
        <fullName>DataType__c</fullName>
        <description>Double, integer, string, date</description>
        <inlineHelpText>Double, integer, string, date</inlineHelpText>
        <label>DataType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <description>Text to appear on the screen on validation failure. May be useful to include the Business Name of the field being validated</description>
        <inlineHelpText>Text to appear on the screen on validation failure. May be useful to include the Business Name of the field being validated</inlineHelpText>
        <label>ErrorMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <description>API Field name not label, must be accurate and must be filled in</description>
        <inlineHelpText>API Field name not label, must be accurate and must be filled in</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>opportunity or HPP_extended_opportunity__c only</description>
        <inlineHelpText>opportunity or HPP_extended_opportunity__c only</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <description>Logical operator to perform against source (Opportunity data) and target (Custom setting) value. Comparison will be performed that way round, i.e. Opportunity.Name &gt; RewindValidation__c.Value</description>
        <inlineHelpText>Values of &quot;=&quot;, &quot;&lt;&quot;, &quot;&lt;=&quot;, &quot;&gt;&quot; , &quot;&gt;=&quot; , &quot;&lt;&gt;&quot; only, any other or blank will assume &quot;=&quot;</inlineHelpText>
        <label>Operator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The value in the field to be compared, if to be compared with empty or null vales, set as 
 &apos;-BLANK-&apos;  e.g. If can&apos;t rewind if Opportunity stage is empty then set Value to -BLANK-</description>
        <inlineHelpText>The value in the field to be compared, if to be compared with empty or null vales, set as 
 &apos;-BLANK-&apos;</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RewindValidation</label>
    <listViews>
        <fullName>Rewind_Validations</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Field__c</columns>
        <columns>DataType__c</columns>
        <columns>Operator__c</columns>
        <columns>Value__c</columns>
        <columns>ErrorMessage__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Rewind Validations</label>
        <language>en_US</language>
        <sharedTo>
            <group>Change_Delivery_Xactium_R</group>
            <group>Change_Delivery_Xactium_R_W</group>
            <group>IT</group>
        </sharedTo>
    </listViews>
</CustomObject>